Cool/tests/bad/9-no-main.cl
class Main inherits IO {
  maine() : Object { 
    self.out_string("Hello, world.\n") 
  } ;
} ; 
